Fix visual issues with mobile (#1323)
- Fixes the play screen overlapping the text, it's also neater now
because i used refs for the spacing on mobile. Additionally works on
tablets
- Fixes achievements page going off screen

--- a/client/src/app/main-menu/achievements.module.scss
+++ b/client/src/app/main-menu/achievements.module.scss
@@ -1,18 +1,22 @@
 .cosmeticsLayout {
 	width: 100vw;
-	height: 100vh;
+	margin-top: 5vh;
 	display: flex;
 	justify-content: center;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .body {
-	padding: 1vh;
+	margin: 1vh;
 	display: block;
 	display: flex;
 	flex-direction: row;
 	max-width: 80rem;
 	width: 100%;
-	height: 95vh;
+	max-height: 95vh;
+	overflow: hidden;
 
 	h2 {
 		font-size: 3vh;
@@ -29,23 +33,19 @@
 	align-items: center;
 	justify-content: center;
 }
+
 .body2 {
-	flex-grow: 1;
-	height: 100%;
-	width: 100%;
 	overflow-y: hidden;
 	display: flex;
 	flex-direction: column;
 }
 
 .itemSelector {
-	flex-grow: 1;
 	padding: 1rem;
 	border: 2px black solid;
 	border-top: 0px;
 	background-color: var(--gray-600);
-	height: 100%;
-	overflow-y: hidden;
+	overflow-y: auto;
 }
 
 .nameSelector {
