--- a/client/src/components/game-mode-button/game-mode-button.module.scss
+++ b/client/src/components/game-mode-button/game-mode-button.module.scss
@@ -5,7 +5,7 @@ $time: 0.25s;
 
 $mobileWidth: 90vw;
 $mobileHeight: 20vh;
-$expandedHeight: 67vh;
+$expandedHeight: $mobileHeight * 3 + 1.5 * 3;
 
 .buttonContainer {
 	width: $width;
@@ -658,7 +658,7 @@ $expandedHeight: 67vh;
 	}
 }
 
-@media screen and (max-width: 720px) {
+@media (orientation: portrait) {
 	.buttonContainer {
 		width: $mobileWidth;
 		height: $mobileHeight;
@@ -786,5 +786,10 @@ $expandedHeight: 67vh;
 
 	.rematchTimeRemaining {
 		margin-left: 0px;
+	}
+
+	.backgroundImage {
+		object-position: top;
+		object-fit: none;
 	}
 }
